# Solemne1Webs

./: .flake8  .gitignore  README.md  dockerfile  main.py  pyproject.toml  ruff.toml  test_main.py
.github/workflows/: docker.yml  main.yml  python_test.yml
