[tool.poetry]
name = "solemne1web"
version = "0.1.0"
description = ""
authors = ["Ignacio Rehbein <78046088+Nach0t@users.noreply.github.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "datetime>=5.5,<6.0"  # Corrigido: datetime sin paréntesis
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
